tests/baselines/reference/overloadOnConstInBaseWithBadImplementationInDerived(strict=true).errors.txt
overloadOnConstInBaseWithBadImplementationInDerived.ts(2,5): error TS7010: 'x1', which lacks return-type annotation, implicitly has an 'any' return type.


==== overloadOnConstInBaseWithBadImplementationInDerived.ts (1 errors) ====
    interface I {
        x1(a: number, callback: (x: 'hi') => number);
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'x1', which lacks return-type annotation, implicitly has an 'any' return type.
    }
    
    class C implements I {
        x1(a: number, callback: (x: 'hi') => number) { // error
        }
    }